# frog_compass

./: .gitignore  approximate.bat  approximate.ipynb  approximate.py  approximation.bat  approximation.ipynb  approximation.py  calc_residuals.bat  calc_residuals.ipynb  combine_files.bat  combine_files.py  detrend.bat  detrend.py  detrend_many.py  detrend_multiple.bat  detrend_multiple.py  pyproject.toml  readme.md  spline.ipynb
