[tool.poetry]
name = "frog_data_processing"
version = "0.1.0"
description = ""
authors = ["Andrei Zherder <88932094+AndreiZherder@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
natsort = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
